Prep Terms Accepted

--- a/ArsaRExCH/Components/Account/Pages/ForgotPassword.razor
+++ b/ArsaRExCH/Components/Account/Pages/ForgotPassword.razor
@@ -69,7 +69,7 @@
         }
         catch (Exception w)
         {
-            Console.WriteLine(w.ToString);
+            Console.WriteLine(w);
         }
         RedirectManager.RedirectTo("Account/ForgotPasswordConfirmation");
     }
