--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -112,7 +112,7 @@
             <a href="AddMoneyBank">Deposit Money</a>
             <a href="Bet1">Bet</a>
             <a href="AdminPanel">Admin Panel</a>
-            <a href="AirDrop">AirDrop</a>
+            <a href="Prepetual">Prepetual</a>
             <a href="BTCusdt">Trade</a>
 
             <div class="tab-container">
@@ -121,6 +121,8 @@
                     <a href="BetHistory">Bet History</a>
                     <a href="BitcoinPoolOneUsers">Pools</a>
                     <a href="Forum">Forum</a>
+                    <a href="AirDrop">AirDrop</a>
+
                 </div>
             </div>
 
