--- a/ArsaRExCH/Components/MyComponents/PropComponentss/BTCUSDTP.razor
+++ b/ArsaRExCH/Components/MyComponents/PropComponentss/BTCUSDTP.razor
@@ -1,8 +1,9 @@
 ﻿@page "/Prepetual/BTCUSDTP"
 @rendermode InteractiveServer
 <h3>BTCUSDTP</h3>
-
+<BtcPricePrepetual>
     <Myc></Myc>
+</BtcPricePrepetual>
 @code {
 
 }
